sites/all/themes/pul_base/assets/source/styles/components/search/_search--quicktabs.scss
.front .quicktabs-tabpage form {
  height: 65px;
}

// .front .quicktabs-tabpage {
//   background: $black;
//   border-radius: $slight-border-radius;
// }

.block--quicktabs,
.pane-quicktabs-mendel-search-tabs {
  margin: 0 auto;

  h2 {
    display: none;
    margin: 0;
  }

  .allsearch-block-form {
    position: relative;
  }

  .quicktabs-tabs li.active {
    margin-bottom: 0;
    padding-bottom: 0;
  }

  .quicktabs-tabs {
    background: $black;
    border: 0;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    border-top-left-radius: $base-border-radius;
    border-top-right-radius: $base-border-radius;
    display: none;
    padding: 0 0 0 4em;
  }

  .quicktabs_main {
    // background: darken($gray-lightest, 3);
    border-bottom-left-radius: $base-border-radius;
    border-bottom-right-radius: $base-border-radius;
    clear: both;
    font-size: $font-size-base;
    padding: 0 1.4em;
  }

  .quicktabs-tabs>li {
    // background: $gray-lightest;
    border: 0;
    clear: none;
    display: inline-block;
    float: left;
    margin: 0;
    padding: 0;
    text-align: center;
    top: 0;
    width: auto;

    a {
      background: $black;
      border-top-left-radius: $base-border-radius;
      border-top-right-radius: $base-border-radius;
      color: $white;
      display: inline-block;
      font-family: $font-primary;
      font-size: 1.2em;
      font-weight: bold;
      margin: 0 1em 0 0;
      min-width: 120px;
      padding: 0.25em;
      text-align: center;
    }

    a:hover {
      background: lighten($black, 10);
    }

    a:active {
      transition: all 0 2s ease-in-out;
    }

    a:focus {
      background: lighten($black, 10);
    }
  }

  .quicktabs-tabs li.active a {
    background: $black;
    color: $white;
  }

  .quicktabs-tabs li.ui-state-active a,
  .ui-widget-header .ui-state-active {
    background: darken($gray-lightest, 2%);
    color: $black;
  }

  .form-item-query label {
    @include visually-hidden;
  }

  .form-type-textfield {
    margin-bottom: 0;
  }

  .block__content {
    overflow: hidden;
  }

  .form-item-query {
    display: inline;
  }

  input[type="text"] {
    border: 5px solid $black;
    border-radius: $base-border-radius;
    display: block;
    float: left;
    font-family: $font-primary;
    margin: 0;
    padding: 20px;
    position: relative;
    width: 100%;

    &:focus {
      box-shadow: none;
      outline: none;
    }
  }

  .quicktabs_main input[type="submit"] {
    @include hidden;
  }

  .quicktabs_main button {
    background: $orange;
    border: 5px solid $black;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: $base-border-radius;
    border-left: 0;
    border-top-left-radius: 0;
    border-top-right-radius: $base-border-radius;
    clear: none;
    color: $black;
    float: left;
    font-family: $font-primary; // height: 45px;
    margin: 0;
    padding: 20px;
    position: absolute;
    right: 0;

    span {
      font-weight: bold;
    }

    .icon-search {
      font-size: 18px;
      line-height: 0;
      vertical-align: middle;
    }
  }

  .quicktabs_main .icon-search .hide-sm {
    font-family: $font-primary;
  }

  .homepage-tab-form-message {
    display: none;

    @include breakpoint($tab) {
      background: $black;
      border-radius: $base-border-radius;
      display: block;
      margin-left: auto;
      margin-right: auto;
      margin-top: -10px;
      padding: 10px 0 5px;
      text-align: center;
      width: 95%;

    }

    li {
      @include breakpoint($tab) {
        border-right: 1px solid $white;
        display: inline;
        font-size: 1.1em;

        &:last-child {
          border: 0;
        }
      }
    }

    a {
      padding: 1em;
    }
  }
}

.pane-quicktabs-mendel-search-tabs .quicktabs-tabs {
  margin-left: 0;

  >li {
    width: 33.33%;
  }
}

.pane-quicktabs-mendel-search-tabs h2 {
  display: block;
  margin-bottom: 1em;
}

.block--quicktabs-homepage-search-tabs {
  clear: both;
  margin: 0 auto;
  width: 100%;
}

.front .block--quicktabs-homepage-search-tabs {
  @include breakpoint($tab-desk) {
    width: 70%;
  }
}

